fix: new role button alignment

--- a/console/src/app/pages/projects/project-role-create/project-role-create.component.scss
+++ b/console/src/app/pages/projects/project-role-create/project-role-create.component.scss
@@ -1,4 +1,3 @@
-
 .container {
   padding: 4rem 4rem 2rem 4rem;
 
@@ -25,31 +24,38 @@
 
   .add-line-btn {
     margin-bottom: 1rem;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
   }
 }
 
-.content {
+.newrole-content {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  display: flex;
-  margin: 0 -.5rem;
-  flex-wrap: wrap;
   border-bottom: 1px solid #ffffff20;
+  margin-bottom: 1rem;
+  display: flex;
 
-  .formfield {
-    margin: 0 .5rem;
+  .newrole {
+    display: grid;
+    grid-template-columns: 1fr;
+    flex: 1;
 
-    @media only screen and (max-width: 450px) {
-      flex-basis: 100%;
+    @media only screen and (min-width: 1000px) {
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-gap: 1rem;
     }
+  }
+
+  button {
+    align-self: flex-end;
+    margin-bottom: 1rem;
   }
 }
 
 .continue-button {
   margin-top: 3rem;
   display: block;
-  padding: .5rem 4rem;
+  padding: 0.5rem 4rem;
 
   @media only screen and (max-width: 450px) {
     margin-top: 1rem;
